--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -129,6 +129,7 @@
             android:id="@+id/textView5"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginEnd="16dp"
             android:text="@string/viewsCounter"
             app:layout_constraintBottom_toBottomOf="@+id/shareCounter"
             app:layout_constraintEnd_toEndOf="parent"
