--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -30,7 +30,7 @@
 
     <TextView
         android:id="@+id/messageText"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
@@ -39,6 +39,7 @@
         android:text="@string/messageText"
         android:textSize="14sp"
         app:barrierDirection="bottom"
+        app:layout_constraintEnd_toStartOf="@+id/moreVert"
         app:layout_constraintStart_toEndOf="@+id/ic_netology_48dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_optimizationLevel="barrier" />
