--- a/app/src/main/res/layout/post_card.xml
+++ b/app/src/main/res/layout/post_card.xml
@@ -37,12 +37,12 @@
         android:text="@string/messageText"
         android:textSize="14sp"
         app:barrierDirection="bottom"
-        app:layout_constraintEnd_toStartOf="@+id/moreVert"
+        app:layout_constraintEnd_toStartOf="@+id/menu"
         app:layout_constraintStart_toEndOf="@+id/ic_netology_48dp"
         app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
-        android:id="@+id/moreVert"
+        android:id="@+id/menu"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintBottom_toBottomOf="@+id/messageText"
