--- a/app/src/main/res/layout/post_card.xml
+++ b/app/src/main/res/layout/post_card.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/post_card"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
@@ -45,6 +44,7 @@
         android:id="@+id/menu"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:contentDescription="@string/menu_icon"
         app:layout_constraintBottom_toBottomOf="@+id/messageText"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="@+id/messageText"
@@ -81,6 +81,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
+        android:contentDescription="@string/like_button"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/mainText"
         app:srcCompat="@drawable/grey_favorite_border_24" />
@@ -100,6 +101,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
+        android:contentDescription="@string/share_button"
         app:layout_constraintBottom_toBottomOf="@+id/likeCounter"
         app:layout_constraintStart_toEndOf="@+id/likeCounter"
         app:layout_constraintTop_toTopOf="@+id/likeCounter"
@@ -130,6 +132,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
+        android:contentDescription="@string/view_icon"
         app:layout_constraintBottom_toBottomOf="@+id/viewsCounter"
         app:layout_constraintEnd_toStartOf="@+id/viewsCounter"
         app:layout_constraintTop_toTopOf="@+id/viewsCounter"
