--- a/app/src/main/res/layout/post_card.xml
+++ b/app/src/main/res/layout/post_card.xml
@@ -88,7 +88,7 @@
         android:contentDescription="@string/like_button"
         app:icon="@drawable/like_selector"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/video_group" />
+        app:layout_constraintTop_toBottomOf="@+id/video_button" />
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/share"
@@ -128,18 +128,26 @@
         android:id="@+id/video_group"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
-        android:visibility="gone"
+        android:layout_marginEnd="16dp"
+        android:visibility="visible"
         app:constraint_referenced_ids="video_button"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="@id/mainText"
         app:layout_constraintTop_toBottomOf="@id/mainText" />
 
     <ImageButton
         android:id="@+id/video_button"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
         android:contentDescription="Video image"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:scaleType="centerInside"
+        android:src="@mipmap/maxresdefault"
+        app:layout_constraintEnd_toEndOf="@id/video_group"
+        app:layout_constraintStart_toStartOf="@id/video_group"
+        app:layout_constraintTop_toTopOf="@id/video_group" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
