--- a/app/src/main/res/layout/activity_new_post.xml
+++ b/app/src/main/res/layout/activity_new_post.xml
@@ -27,7 +27,7 @@
         android:id="@+id/ok"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:contentDescription="SaveButton"
+        android:contentDescription="@string/savebutton"
         app:layout_anchor="@id/bottomAppBar"
         app:srcCompat="@drawable/ic_check_circle_24" />
 
