--- a/app/src/main/res/layout/fragment_one_post.xml
+++ b/app/src/main/res/layout/fragment_one_post.xml
@@ -3,10 +3,11 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:fitsSystemWindows="true"
     tools:context=".OnePostFragment">
 
     <include
-        layout="@layout/post_card"
-        android:id="@+id/post" />
+        android:id="@+id/post"
+        layout="@layout/post_card" />
 
 </ScrollView>
