--- a/app/src/main/res/layout/post_card.xml
+++ b/app/src/main/res/layout/post_card.xml
@@ -12,11 +12,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:barrierDirection="bottom"
-        app:constraint_referenced_ids="ic_netology_48dp,messageDate" />
+        app:constraint_referenced_ids="ic_avatar_48dp,messageDate" />
 
 
     <ImageView
-        android:id="@+id/ic_netology_48dp"
+        android:id="@+id/ic_avatar_48dp"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
@@ -39,7 +39,7 @@
         android:textSize="14sp"
         app:barrierDirection="bottom"
         app:layout_constraintEnd_toStartOf="@+id/menu"
-        app:layout_constraintStart_toEndOf="@+id/ic_netology_48dp"
+        app:layout_constraintStart_toEndOf="@+id/ic_avatar_48dp"
         app:layout_constraintTop_toTopOf="parent" />
 
     <com.google.android.material.button.MaterialButton
@@ -61,7 +61,7 @@
         android:layout_marginTop="8dp"
         android:text="@string/messageDate"
         app:barrierDirection="bottom"
-        app:layout_constraintStart_toEndOf="@+id/ic_netology_48dp"
+        app:layout_constraintStart_toEndOf="@+id/ic_avatar_48dp"
         app:layout_constraintTop_toBottomOf="@+id/messageText"
         app:layout_optimizationLevel="barrier" />
 
